basic layout and bower

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,7 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+	.jumbotron.invert
+		.container
+			.row
+				canvas#astroids.col-md-12
