--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,27 @@
 doctype 5
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+	head
+		title= title
+		link(rel="stylesheet", href="/stylesheets/style.css")
+		link(rel="stylesheet", href="/bower_components/bootstrap-css/css/bootstrap.min.css")
+		script(type="text/javascript", src="/bower_components/angular/angular.min.js")
+		script(type="text/javascript", src="/bower_components/jquery/jquery.min.js")
+		script(type="text/javascript", src="/bower_components/bootstrap-css/js/bootstrap.min.js")
+	body
+		div.container
+			div.row
+				nav(role="navigation").navbar.navbar-inverse
+					.navbar-header
+						button(type="button", data-toggle="collapse", data-target=".navbar-ex1-collapse").navbar-toggle
+							span.sr-only Toggle navigation
+							span.icon-bar
+							span.icon-bar
+							span.icon-bar
+						a(href="/" ).navbar-brand Asteroids
+					.collapse.navbar-collapse.navbar-ex1-collapse
+						ul.nav.navbar-nav 
+							li.active: a(href="#") Game
+							li: a(href="#") About
+			div.row
+				block content
+				
